# concorsi-qualifier

./: .gitignore  .mcp.json  CLAUDE.md  README.md  SPEC.md  extract_new.py  ocr_worker.py  pipeline_db_helper.py  project-brief.md  prompt-init-sessione.md  pyproject.toml  reextract_with_pdf.py  run_pipeline.sh
config/: sources.yaml
docs/: architecture.md  case-study.md  richiesta-modifica-n8n-concorsi-digest.md  roadmap.md
mcp/: server.py  tools.py
src/: db.py
src/api/: __main__.py  main.py
src/collector/: __init__.py  __main__.py  crawler.py  db.py  dedup.py
src/extractor/: __init__.py  __main__.py  chain.py  models.py  prompt.py
src/matcher/: __init__.py  __main__.py  checks.py  matcher.py  models.py
src/notifier/: __init__.py  __main__.py  digest.py
src/parser/: __init__.py  fallback_chain.py  pdf_ocr.py  pdf_text.py
src/reporter/: __init__.py  __main__.py  chain.py  prompt.py  renderer.py
tests/: test_collector.py  test_config.py  test_db.py  test_extractor.py  test_integration.py  test_matcher.py  test_models.py  test_notifier.py  test_parser.py  test_reporter.py
