[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "concorsi-qualifier"
version = "0.1.0"
description = "AI-powered monitoring and qualification system for Italian public job competitions"
requires-python = ">=3.11"
dependencies = [
    # Scraping
    "crawlee>=0.4",
    # LLM orchestration
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-openai>=0.2",       # per OpenRouter via base_url override
    # Data validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # PDF extraction
    "pdfplumber>=0.11",
    "pypdf>=4.3",
    # OCR fallback
    "pytesseract>=0.3",
    "Pillow>=10.3",                # richiesto da pytesseract
    # Storage
    "aiosqlite>=0.20",             # accesso async a SQLite
    # HTTP
    "httpx>=0.27",
    # Config
    "pyyaml>=6.0",
    # Utilities
    "python-dateutil>=2.9",
    "tenacity>=8.3",               # retry con backoff per LLM calls
    "rich>=13.7",                  # output CLI leggibile
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml",
    "types-python-dateutil",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
